syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "message_type.proto";
import "remote_service_task.proto";

message MessageSendQueueInfo{
    string id=1;
	//任务编号
	string taskNo=2;
	//消息类型ID
	string messageTypeID=3;
	MessageTypeInfo messageType=4;
	//收件地址
	string to=5;
	//抄送地址
	string cc=6;
	//标题
	string title=7;
	//内容
	string content=8;
	//发送次数
	int32 sendTimes=9;
	//创建时间
	string createTime=10;
	//创建人员
	string createUserID=11;
	string createUserName=19;
	//当前状态
	string currentState=12;
	//状态变更时间
	string lastUpdateTime=13;
	//备注
	string remark=14;
	//远程任务ID
	string remoteServiceTaskID=15;
	RemoteServiceTaskInfo remoteServiceTask=16;
	//消息发送队列参数
	repeated MessageSendQueueParameterInfo messageParameters=17;
	//消息发送队列执行
	repeated MessageSendQueueExecutionInfo sendExecutions=18;
}

message MessageSendQueueParameterInfo{
	string id=1;
	//消息发送队列ID
	string MessageSendQueueID=2;
	//名称
	string Name=3;
	//设定值
	string FixedValue=4;
	//备注
	string Remark=5;
}

message MessageSendQueueExecutionInfo{
	string id=1;
	//消息发送队列ID
	string MessageSendQueueID=2;
	//是否成功
	bool Success=3;
	//失败原因
	string FailureReason=4;
	//创建时间
	string CreateTime=5;
}

message QueryMessageSendQueueRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//任务编号
	// @inject_tag: uri:"taskNo" form:"taskNo"
	string taskNo=4;
	//消息类型ID
	// @inject_tag: uri:"messageTypeID" form:"messageTypeID"
	string messageTypeID=5;
	// 创建时间开始
    // @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=6;
    // 创建时间结束
    // @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=7;
}

message QueryMessageSendQueueResponse{
    Code code=1;
    string message=2;
    repeated MessageSendQueueInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMessageSendQueueResponse{
    Code code=1;
    string message=2;
    repeated MessageSendQueueInfo data=3;
}

message GetMessageSendQueueDetailResponse{
    Code code=1;
    string message=2;
    MessageSendQueueInfo data=3;
}